oauth for asyncapi-directory

--- a/src/app/directory/directory.component.html
+++ b/src/app/directory/directory.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
   <span>AsyncAPI Directory</span>
   <span class="fill-space"></span>
+  <span><button mat-raised-button (click)="login()">Login</button></span>
 </mat-toolbar>
 
 <span class="topper">
